@@ -1,6 +1,7 @@
 package com.project.kodesalon.service.member;
 
 import com.project.kodesalon.domain.board.Board;
+import com.project.kodesalon.domain.image.Image;
 import com.project.kodesalon.domain.member.Member;
 import com.project.kodesalon.domain.member.vo.Alias;
 import com.project.kodesalon.repository.board.BoardRepository;
@@ -20,29 +21,27 @@ import org.springframework.dao.DataIntegrityViolationException;
 
 import javax.persistence.EntityNotFoundException;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static com.project.kodesalon.exception.ErrorCode.ALREADY_EXIST_MEMBER_ALIAS;
 import static com.project.kodesalon.exception.ErrorCode.NOT_EXIST_MEMBER;
-import static com.project.kodesalon.utils.TestEntityUtils.getTestMember;
+import static com.project.kodesalon.exception.ErrorCode.NOT_EXIST_MEMBER_ALIAS;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.assertj.core.api.BDDAssertions.thenThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class MemberServiceTest {
 
-    private static final Member TEST_MEMBER = getTestMember();
-
     private final BDDSoftAssertions softly = new BDDSoftAssertions();
-    private final MemberCreateRequest memberCreateRequest =
-            new MemberCreateRequest("alias", "Password123!!", "이름", "email@email.com", "010-1111-2222", LocalDateTime.now());
 
     @InjectMocks
     private MemberService memberService;
@@ -56,9 +55,17 @@ class MemberServiceTest {
     @Mock
     private Member member;
 
+    @Mock
+    private Board board;
+
+    @Mock
+    private Image image;
+
     @Test
-    @DisplayName("회원가입이 성공하면 repository에 회원 객체를 저장합니다.")
+    @DisplayName("회원가입이 성공하면 DB에 회원 객체를 저장합니다.")
     void join() {
+        MemberCreateRequest memberCreateRequest
+                = new MemberCreateRequest("alias", "Password123!!", "이름", "email@email.com", "010-1234-5678", LocalDateTime.now());
         given(member.getId()).willReturn(1L);
         given(memberRepository.findMemberByAlias(any(Alias.class))).willReturn(Optional.empty());
         given(memberRepository.save(any(Member.class))).willReturn(member);
@@ -72,6 +79,8 @@ class MemberServiceTest {
     @Test
     @DisplayName("회원가입 시 이미 존재하는 아이디(Alias)일 경우, 예외 메세지를 반환합니다.")
     void join_throw_exception_with_already_exist() {
+        MemberCreateRequest memberCreateRequest
+                = new MemberCreateRequest("alias", "Password123!!", "이름", "email@email.com", "010-1234-5678", LocalDateTime.now());
         given(memberRepository.findMemberByAlias(any(Alias.class))).willReturn(Optional.of(member));
 
         thenThrownBy(() -> memberService.join(memberCreateRequest))
@@ -82,6 +91,8 @@ class MemberServiceTest {
     @Test
     @DisplayName("회원 가입시 삭제한 회원이 다시 가입했을 경우에는 예외를 발생시킵니다")
     void join_throw_exception_with_left_alias_after_delete() {
+        MemberCreateRequest memberCreateRequest
+                = new MemberCreateRequest("alias", "Password123!!", "이름", "email@email.com", "010-1234-5678", LocalDateTime.now());
         given(memberRepository.save(any(Member.class))).willThrow(new DataIntegrityViolationException(ALREADY_EXIST_MEMBER_ALIAS));
 
         thenThrownBy(() -> memberService.join(memberCreateRequest))
@@ -92,30 +103,36 @@ class MemberServiceTest {
     @Test
     @DisplayName("회원정보 조회 성공 시, 회원 별명, 이름, 이메일, 전화 번호, 회원이 올린 게시물들을 반환합니다.")
     void exist_id_response_member() {
-        Board board = new Board("게시물 제목", "게시물 내용", member, LocalDateTime.now());
-        given(memberRepository.selectMemberById(anyLong())).willReturn(Optional.of(member));
+        given(memberRepository.findById(anyLong())).willReturn(Optional.of(member));
         given(member.getAlias()).willReturn("alias");
         given(member.getName()).willReturn("이름");
         given(member.getEmail()).willReturn("email@email.com");
         given(member.getPhone()).willReturn("010-1111-2222");
-        given(member.getBoards()).willReturn(Collections.singletonList(board));
+        given(boardRepository.selectMyBoards(anyLong(), anyLong(), anyInt()))
+                .willReturn(List.of(board));
+        given(board.getId()).willReturn(1L);
+        given(board.getTitle()).willReturn("게시물 제목");
+        given(board.getContent()).willReturn("게시물 내용");
+        given(board.getImages()).willReturn(List.of(image));
+        given(image.getId()).willReturn(1L);
+        given(image.getUrl()).willReturn("localhost:8080/image.jpg");
 
-        MemberSelectResponse memberSelectResponse = memberService.selectMember(anyLong());
+        MemberSelectResponse memberSelectResponse = memberService.selectMember(1L, 10L, 1);
 
         softly.then(memberSelectResponse.getAlias()).isEqualTo("alias");
         softly.then(memberSelectResponse.getName()).isEqualTo("이름");
         softly.then(memberSelectResponse.getEmail()).isEqualTo("email@email.com");
         softly.then(memberSelectResponse.getPhone()).isEqualTo("010-1111-2222");
-        softly.then(memberSelectResponse.getOwnBoards().size());
+        softly.then(memberSelectResponse.getOwnBoards().getBoards()).isNotEmpty();
         softly.assertAll();
     }
 
     @Test
     @DisplayName("회원 정보 조회 시 찾으려는 회원이 없으면 예외를 반환합니다.")
     void select_not_exist_id_throws_exception() {
-        given(memberRepository.selectMemberById(anyLong())).willReturn(Optional.empty());
+        given(memberRepository.findById(anyLong())).willReturn(Optional.empty());
 
-        thenThrownBy(() -> memberService.selectMember(1L))
+        thenThrownBy(() -> memberService.selectMember(1L, 1L, 1))
                 .isInstanceOf(EntityNotFoundException.class)
                 .hasMessage(NOT_EXIST_MEMBER);
     }
@@ -156,11 +173,12 @@ class MemberServiceTest {
     @Test
     @DisplayName("회원 식별 번호를 인자로 받아, 해당 식별 번호를 가진 회원을 DB로 조회한다.")
     void findById() {
-        given(memberRepository.findById(anyLong())).willReturn(Optional.of(TEST_MEMBER));
+        Member member = mock(Member.class);
+        given(memberRepository.findById(anyLong())).willReturn(Optional.of(member));
 
-        Member member = memberService.findById(anyLong());
+        Member foundMember = memberService.findById(anyLong());
 
-        then(member).isEqualTo(TEST_MEMBER);
+        then(foundMember).isEqualTo(foundMember);
     }
 
     @Test
@@ -171,5 +189,15 @@ class MemberServiceTest {
         thenThrownBy(() -> memberService.findById(anyLong()))
                 .isInstanceOf(EntityNotFoundException.class)
                 .hasMessage(NOT_EXIST_MEMBER);
+    }
+
+    @Test
+    @DisplayName("회원 아이디로 조회시 회원이 없으면 예외를 발생시킨다.")
+    void findByAlias_throw_exception_with_not_exist_member() {
+        given(memberRepository.findMemberByAlias(any(Alias.class)))
+                .willReturn(Optional.empty());
+
+        thenThrownBy(() -> memberService.findMemberByAlias("alias")).isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining(NOT_EXIST_MEMBER_ALIAS);
     }
 }
